<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name ="MyName"
            type="com.example.aboutyou.MyName"/>
    </data>
<LinearLayout
    android:id="@+id/name"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/topmargin"
    android:contentDescription="@string/name"
    android:orientation="vertical"
    android:paddingLeft="@dimen/namesize"
    android:paddingTop="@dimen/smallpadding"
    android:paddingRight="@dimen/namesize"
    android:textAlignment="center">

    <TextView
        android:id="@+id/name_id"
        style="@style/name_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:text="@={MyName.name}"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/nickname_edit"
        style="@style/name_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/what_is_your_nickname"
        android:inputType="textPersonName"
        android:textAlignment="center" />

    <Button
        android:id="@+id/done_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/topmargin"
        android:backgroundTint="@color/teal_700"
        />
    <TextView
        android:id="@+id/nicknameView"
        style="@style/name_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@={MyName.nickname}"
        android:textAlignment="center"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/star_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/topmargin"
        android:contentDescription="@string/yellow_star"
        app:srcCompat="@android:drawable/btn_star_big_on"
        tools:ignore="ImageContrastCheck" />



    <ScrollView
        android:id="@+id/scroll_bio"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/namesize">

        <TextView
            android:id="@+id/bio_text"
            style="@style/name_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/bio"
            android:textColor="@color/design_default_color_on_secondary"
            android:textSize="16sp" />
    </ScrollView>


</LinearLayout></layout>